Initial checkin of refactored entity engine.